--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Incheon United F.C.</title>
+    <link rel="icon" href="./images/matchCenter/인천.png">
   </head>
   <body>
     <div id="root"></div>
